--- a/UI/Properties/Resources.resx
+++ b/UI/Properties/Resources.resx
@@ -139,4 +139,7 @@
   <data name="Win10" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Win10.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Pause" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Pause.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
