--- a/UI/Properties/Resources.resx
+++ b/UI/Properties/Resources.resx
@@ -151,4 +151,7 @@
   <data name="icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="clock_alt" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\clock_alt.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
